preview de receitas arrumado

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
     <h2>Receitas do Chef</h2>
     <div class="container">
       <div class="grid-1-3 post">
-        <img src="/img/copo.jpg" alt="">
+        <img src="img/copo.jpg" alt="">
         <p class="subtitulo-post">Sumo de laranja</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magni, iste.</p>
       </div>
 
       <div class="grid-1-3 post">
-        <img src="/img/gourmet.jpg" alt="">
+        <img src="img/gourmet.jpg" alt="">
         <p class="subtitulo-post">Prato Gourmet</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magni, iste.</p>
       </div>
 
       <div class="grid-1-3 post">
-        <img src="/img/comida.jpg" alt="">
+        <img src="img/comida.jpg" alt="">
         <p class="subtitulo-post">Sumo de laranja</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis magni, iste.</p>
       </div>
